--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,14 +16,14 @@
     </script>
 
     <!-- source files -->
-    <script type="text/javascript" src="dataStructures/linkedList.js"></script>
-    <script type="text/javascript" src="dataStructures/doublyLinkedList.js"></script>
-    <script type="text/javascript" src="dataStructures/tree.js"></script>
-    <script type="text/javascript" src="dataStructures/graph.js"></script>
-    <script type="text/javascript" src="dataStructures/set.js"></script>
-    <script type="text/javascript" src="dataStructures/hashTableHelpers.js"></script>
-    <script type="text/javascript" src="dataStructures/hashTable.js"></script>
-    <script type="text/javascript" src="dataStructures/binarySearchTree.js"></script>
+    <script type="text/javascript" src="data-structures/linkedList.js"></script>
+    <script type="text/javascript" src="data-structures/doublyLinkedList.js"></script>
+    <script type="text/javascript" src="data-structures/tree.js"></script>
+    <script type="text/javascript" src="data-structures/graph.js"></script>
+    <script type="text/javascript" src="data-structures/set.js"></script>
+    <script type="text/javascript" src="data-structures/hashTableHelpers.js"></script>
+    <script type="text/javascript" src="data-structures/hashTable.js"></script>
+    <script type="text/javascript" src="data-structures/binarySearchTree.js"></script>
 
 
     <!-- spec files -->
