--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -24,16 +24,18 @@
     <script type="text/javascript" src="data-structures/hashTableHelpers.js"></script>
     <script type="text/javascript" src="data-structures/hashTable.js"></script>
     <script type="text/javascript" src="data-structures/binarySearchTree.js"></script>
+    <script type="text/javascript" src="algorithms/deepEquality.js"></script>
 
 
     <!-- spec files -->
-    <script type="text/javascript" src="spec/linkedListSpec.js"></script>
+    <!-- <script type="text/javascript" src="spec/linkedListSpec.js"></script>
     <script type="text/javascript" src="spec/doublyLinkedListSpec.js"></script>
     <script type="text/javascript" src="spec/treeSpec.js"></script>
     <script type="text/javascript" src="spec/graphSpec.js"></script>
     <script type="text/javascript" src="spec/setSpec.js"></script>
     <script type="text/javascript" src="spec/hashTableSpec.js"></script>
-    <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
+    <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script> -->
+    <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
 
   </head>
   <body>
