--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -28,13 +28,13 @@
 
 
     <!-- spec files -->
-    <!-- <script type="text/javascript" src="spec/linkedListSpec.js"></script>
+    <script type="text/javascript" src="spec/linkedListSpec.js"></script>
     <script type="text/javascript" src="spec/doublyLinkedListSpec.js"></script>
     <script type="text/javascript" src="spec/treeSpec.js"></script>
     <script type="text/javascript" src="spec/graphSpec.js"></script>
     <script type="text/javascript" src="spec/setSpec.js"></script>
     <script type="text/javascript" src="spec/hashTableSpec.js"></script>
-    <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script> -->
+    <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
 
   </head>
