--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="data-structures/hashTable.js"></script>
     <script type="text/javascript" src="data-structures/binarySearchTree.js"></script>
     <script type="text/javascript" src="algorithms/deepEquality.js"></script>
-
+    <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="spec/linkedListSpec.js"></script>
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="spec/hashTableSpec.js"></script>
     <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
 
   </head>
   <body>
