--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -26,7 +26,8 @@
     <script type="text/javascript" src="data-structures/binarySearchTree.js"></script>
     <script type="text/javascript" src="algorithms/deepEquality.js"></script>
     <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
-
+    <script type="text/javascript" src="algorithms/generateParenthesis.js"></script>
+    
     <!-- spec files -->
     <script type="text/javascript" src="spec/linkedListSpec.js"></script>
     <script type="text/javascript" src="spec/doublyLinkedListSpec.js"></script>
@@ -37,6 +38,7 @@
     <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
 
   </head>
   <body>
