--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -24,10 +24,11 @@
     <script type="text/javascript" src="data-structures/hashTableHelpers.js"></script>
     <script type="text/javascript" src="data-structures/hashTable.js"></script>
     <script type="text/javascript" src="data-structures/binarySearchTree.js"></script>
+    <script type="text/javascript" src="data-structures/min-Heap.js"></script>
     <script type="text/javascript" src="algorithms/deepEquality.js"></script>
     <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
     <script type="text/javascript" src="algorithms/generateParenthesis.js"></script>
-    
+
     <!-- spec files -->
     <script type="text/javascript" src="spec/linkedListSpec.js"></script>
     <script type="text/javascript" src="spec/doublyLinkedListSpec.js"></script>
@@ -36,6 +37,7 @@
     <script type="text/javascript" src="spec/setSpec.js"></script>
     <script type="text/javascript" src="spec/hashTableSpec.js"></script>
     <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
+    <script type="text/javascript" src="spec/data-structures/min-HeapSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
