min-heap-test closes #34

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="spec/setSpec.js"></script>
     <script type="text/javascript" src="spec/hashTableSpec.js"></script>
     <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
-    <script type="text/javascript" src="spec/data-structures/min-HeapSpec.js"></script>
+    <script type="text/javascript" src="spec/min-HeapSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
