--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -17,10 +17,11 @@
 
     <!-- source files -->
     <script type="text/javascript" src="algorithms/KMPSearchString.js"></script>
-
+    <script type="text/javascript" src="algorithms/combinations.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/combinationsSpec.js"></script>
 
   </head>
   <body>
