--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -17,11 +17,18 @@
 
     <!-- source files -->
     <script type="text/javascript" src="algorithms/KMPSearchString.js"></script>
+    <script type="text/javascript" src="algorithms/deepEquality.js"></script>
+    <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
+    <script type="text/javascript" src="algorithms/generateParenthesis.js"></script>
     <script type="text/javascript" src="algorithms/combinations.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/combinationsSpec.js"></script>
+
 
   </head>
   <body>
