--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
     <script type="text/javascript" src="algorithms/generateParenthesis.js"></script>
     <script type="text/javascript" src="algorithms/combinations.js"></script>
+    <script type="text/javascript" src="algorithms/reduce.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
@@ -28,6 +29,7 @@
     <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/combinationsSpec.js"></script>
+    <script type="text/javascript" src="spec/algorithm-spec/reduceSpec.js"></script>
 
 
   </head>
