--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -16,6 +16,7 @@
     </script>
 
     <!-- source files -->
+    <script type="text/javascript" src="algorithms/quicksort.js"></script>
     <script type="text/javascript" src="algorithms/KMPSearchString.js"></script>
     <script type="text/javascript" src="algorithms/deepEquality.js"></script>
     <script type="text/javascript" src="algorithms/Letter-Combinations-of-a-Phone-Number.js"></script>
@@ -24,6 +25,7 @@
     <script type="text/javascript" src="algorithms/reduce.js"></script>
 
     <!-- spec files -->
+    <script type="text/javascript" src="spec/algorithm-spec/quicksortSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/Letter-Combinations-of-a-Phone-NumberSpec.js"></script>
