--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -16,6 +16,7 @@
     </script>
 
     <!-- source files -->
+    <script type="text/javascript" src="algorithms/wordSearch.js"></script>
     <script type="text/javascript" src="algorithms/quicksort.js"></script>
     <script type="text/javascript" src="algorithms/KMPSearchString.js"></script>
     <script type="text/javascript" src="algorithms/deepEquality.js"></script>
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="algorithms/reduce.js"></script>
 
     <!-- spec files -->
+    <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/quicksortSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
     <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
