spiral-test closes #62

--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -26,9 +26,10 @@
   <script type="text/javascript" src="algorithms/combinations.js"></script>
   <script type="text/javascript" src="algorithms/reduce.js"></script>
   <script type="text/javascript" src="algorithms/comboSum.js"></script>
+  <script type="text/javascript" src="algorithms/spiral-traversal.js"></script>
 
   <!-- spec files -->
-  <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
+  <!-- <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/quicksortSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
@@ -36,7 +37,8 @@
   <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/combinationsSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/reduceSpec.js"></script>
-  <script type="text/javascript" src="spec/algorithm-spec/comboSumSpec.js"></script>
+  <script type="text/javascript" src="spec/algorithm-spec/comboSumSpec.js"></script> -->
+  <script type="text/javascript" src="spec/algorithm-spec/spiral-traversalSpec.js"></script>
 
 
 </head>
