--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -29,7 +29,7 @@
   <script type="text/javascript" src="algorithms/spiral-traversal.js"></script>
 
   <!-- spec files -->
-  <!-- <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
+  <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/quicksortSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/deepEqualitySpec.js"></script>
@@ -37,7 +37,7 @@
   <script type="text/javascript" src="spec/algorithm-spec/generateParenthesisSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/combinationsSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/reduceSpec.js"></script>
-  <script type="text/javascript" src="spec/algorithm-spec/comboSumSpec.js"></script> -->
+  <script type="text/javascript" src="spec/algorithm-spec/comboSumSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/spiral-traversalSpec.js"></script>
 
 
