--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -17,6 +17,7 @@
   </script>
 
   <!-- source files -->
+  <script type="text/javascript" src="algorithms/map.js"></script>
   <script type="text/javascript" src="algorithms/wordSearch.js"></script>
   <script type="text/javascript" src="algorithms/quicksort.js"></script>
   <script type="text/javascript" src="algorithms/KMPSearchString.js"></script>
@@ -29,6 +30,7 @@
   <script type="text/javascript" src="algorithms/spiral-traversal.js"></script>
 
   <!-- spec files -->
+  <script type="text/javascript" src="spec/algorithm-spec/mapSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/quicksortSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/KMPSearchStringSpec.js"></script>
