reverse-string-test closes #89

--- a/AlgorithimsSpecRunner.html
+++ b/AlgorithimsSpecRunner.html
@@ -17,6 +17,7 @@
   </script>
 
   <!-- source files -->
+  <script type="text/javascript" src="algorithms/reverseString.js"></script>
   <script type="text/javascript" src="algorithms/min-stack.js"></script>
   <script type="text/javascript" src="algorithms/map.js"></script>
   <script type="text/javascript" src="algorithms/wordSearch.js"></script>
@@ -31,6 +32,7 @@
   <script type="text/javascript" src="algorithms/spiral-traversal.js"></script>
 
   <!-- spec files -->
+  <script type="text/javascript" src="spec/algorithm-spec/reverseStringSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/min-stackSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/mapSpec.js"></script>
   <script type="text/javascript" src="spec/algorithm-spec/wordSearchSpec.js"></script>
